# world_journal-backend

./: .env.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  scheduler.py  supabase_api.py
earth/: langchain_utils.py  publisher.py  rss_fetcher.py  workflow.py
models/: rss_feed.py
services/: langchain_utils.py  prompt_generator.py  rss_fetcher.py  workflow.py
wheel/: prompt_generator.py  rss_fetcher.py  workflow.py
